Fix hide on mobile

--- a/css/utils.css
+++ b/css/utils.css
@@ -51,3 +51,9 @@
         display: none;
     }
 }
+
+@media screen and (max-width: 820px) {
+    .hide--on--mobile {
+        display: none !important;
+    }
+}
